# apresentacao-semcomp-2020

blog/: .gitlab-ci.yml  app.py  create_fake_data.py  db.py  env.ini  pyproject.toml
blog/docker/base/: .dockerignore  Dockerfile
blog/templates/: base.html  index.html
