[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Bruno <bruno@potelo.com.br>"]

[tool.poetry.dependencies]
python = "^3.8.5"
flask = "*"
bootstrap-flask = "*"
peewee = "*"
Faker = "*"
Flask-WTF = "*"
PyMySQL = "*"
diskcache = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
